--- a/doc/mcsim_with_RStudio.Rmd
+++ b/doc/mcsim_with_RStudio.Rmd
@@ -1,5 +1,7 @@
 ---
 title: "Using MCSim on Windows with RStudio"
+author: "Nan-Hung Hsieh"
+date: "`r Sys.Date()`"
 output: html_document
 ---
 
@@ -7,26 +9,58 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Prerequisites
-
-### 1. Install the following software first,  
+### 1. Prerequisites
 - R (<https://cran.r-project.org/>)  
 - RStudio (<https://www.rstudio.com/>)  
 - Rtools (<https://cran.r-project.org/bin/windows/Rtools/>)  
 
-The R is a programming language for statistical computing and graphics. The RStudio is an integrated development environment for R. They are used to analyze and visualize the simulation result from GNU MCSim. The Rtools includes the C compiler that is used to compile the source code in GNU MCSim to the executable model compiler (**mod.exe**). The model file 
+The **R **is a programming language for statistical computing and graphics. The **RStudio** is an integrated development environment for R. They are used to analyze and visualize the simulation result from GNU MCSim. The **Rtools** includes the C compiler that is used to compile the source code in GNU MCSim to the executable model program (mod.exe).  
 
-### 2. Download "MCSim_under_R" from GitHub repository 
+### 2. Basic setting
 
-(<https://github.com/nanhung/MCSim_under_R>)
+The following steps can help you finish the basic setting to run MCSim in RStudio,
 
+- Download "MCSim_under_R" from GitHub repository (<https://github.com/nanhung/MCSim_under_R>) and unzip it. The `MCSim_under_R` folder include the latest version of GNU MCSim (v6.1.0) and some basic R function (in `function.R`). 
 
-## Including Plots
+- Open `MCSim_under_R.Rproj` file in `MCSim_under_R`. It will open the Rstudio with the default working directory in `MCSim_under_R` folder. 
 
-You can also embed plots, for example:
+- In R Console, run following code to finish the basic setting and load the R functions. 
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r, eval=F}
+source("function.R")
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+</br>
+
+Here are the R functions that can run GNU MCSim in R environment more easily. All R functions are put in `functions.R`.
+
+```{r, eval=F}
+makemcsim(model)
+```
+
+- Preprocessing and compiling the model file to the executable file as `makemcsim` in GNU MCSim.
+
+```{r, eval=F}
+mcsim(model, input.file)
+```
+
+- Using the compiled program to run simulation. 
+
+### 3. Workflow
+
+The workflow of MCSim under R can seperate to three levels. The fisrt level is making program. Since MCSim is free and open source software, each file is provided through human readable code (most are written by C language). To let computer run these code, we need to compile the progam to machine readable code, which is `mod.exe`, the R function `makemod()` can help us make this program. Next, we need to compile the model code to the executable model program. We can use `makemcsim()` to create the program with name `mcsim. ... .exe`. Finally, to conduct model simulation, we need input file that include the given model parameter value and/or input data based on the study purpose. The `mcsim()` provide an alternative way to run simulation in R environment instead of using the command prompt to run simulation. 
+
+![](https://raw.githubusercontent.com/nanhung/MCSim_under_R/master/doc/fig/flowchart.png)
+
+
+### 4. Examples
+
+Some example R scripts will put into the `example` folder. Currently, it has an example of linear model in `linear.R` that can be used to do simple test run. To run GNU MCSim in model simulation, we need to have two types of file (1) **model** and (2) **input** files. The syntax of the model description file can find in GNU MCSim User's Manual - Chapter 5.3. All example `model` and `input` files are located in `input` folder.
+
+Generally, the GNU MCSim used `.model` and `.in` as extension to named the model and input file. However, RStudio doesn't support the syntax highlight for these extenisons. You can add `.R` as extension for these files to help you edit your model or input in RStudio with syntax highlighting. Also, it can help you format you code in the code bracket.
+
+
+### 5. Help
+
+Welcome to submit your problem to my GitHub repo (<https://github.com/nanhung/MCSim_under_R/issues>) or GNU MCSim mailing list (<https://lists.gnu.org/mailman/listinfo/help-mcsim>).
+
