update Rmd and linear example

--- a/doc/mcsim_with_RStudio.Rmd
+++ b/doc/mcsim_with_RStudio.Rmd
@@ -9,16 +9,17 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_knit$set(root.dir = "C:/MinGW/msys/1.0/home/nhsieh/MCSim_under_R")
 ```
 
 ### 0.
 
 GNU MCSim can run under different platforms (GNU/Linux, MacOS, and Windows). However, the basic tools in the Windows system are not available to build and run GNU MCSim. It needs a bit more extra steps to install and execute it. Therefore, 
 
-- Prof. Chiu proposed a practical method using **minGW** to install it (<https://www.gnu.org/software/mcsim/mcsim_with_minGW.pdf>). 
-- Dr. Bois also provide an alternative method to compile and run GNU MCSim through Rtools. This concept called "MCSim under R". 
+- Prof. Weihsueh Chiu proposed a practical method using **minGW** to install it (<https://www.gnu.org/software/mcsim/mcsim_with_minGW.pdf>). 
+- Dr. Frederic Bois also provide an alternative method to compile and run GNU MCSim through Rtools. This concept called "MCSim under R". 
 
-Based on this approach, I experimentally develop an R function `mcsim_install` in R package `pksensi` (<https://cran.r-project.org/web/packages/pksensi/index.html>) to help users easily install GNU MCSim through this function. Here, I proposed an additional idea to run GNU MCSim in RStudio integrated development environment (IDE) that aim to help beginner write and run GNU MCSim's model code in R.
+Based on the second approach, I developed an R function named `mcsim_install` in R package `pksensi` (<https://cran.r-project.org/web/packages/pksensi/index.html>) to help users easily install GNU MCSim through this function. Here, I proposed an additional idea to run GNU MCSim in RStudio integrated development environment (IDE) that aim to help beginner write and run GNU MCSim's model code in R.
 
 ### 1. Prerequisites
 - R (<https://cran.r-project.org/>)  
@@ -31,19 +32,113 @@ The **R **is a programming language for statistical computing and graphics. The 
 
 The following steps can help you finish the basic setting to run MCSim in RStudio,
 
-- Download "MCSim_under_R" from GitHub repository (<https://github.com/nanhung/MCSim_under_R>) and unzip it. The `MCSim_under_R` folder include the latest version of GNU MCSim (v6.1.0) and some basic R function (in `function.R`). 
+- Download "MCSim_under_R" from GitHub repository (<https://github.com/nanhung/MCSim_under_R>) and unzip it. The `MCSim_under_R` folder include the latest version of GNU MCSim (v6.1.0) and some basic R functions (in `function.R`). 
 
-- Open `MCSim_under_R.Rproj` file in `MCSim_under_R`. It will open the Rstudio with the default working directory in `MCSim_under_R` folder. 
+![](https://raw.githubusercontent.com/nanhung/MCSim_under_R/master/doc/fig/download.png)
 
-- In R Console, run the following code to finish the basic setting and load the R functions. 
+- Open `MCSim_under_R.Rproj` file in `MCSim_under_R`. It will open the Rstudio with the default working directory in `MCSim_under_R` folder. You can also run `getwd()` to makesure you are in the correct directory
 
-```{r, eval=F}
+```{r}
+getwd()
+```
+
+- In R Console, run the following code to finish the basic setting and load the R functions. Through running the `function.R`, it will detect and check the C compiler and use it to create the MCSim program `mod.exe` in MCSim folder. 
+
+```{r, eval=T}
 source("function.R")
 ```
 
-</br>
+The `function.R` include some R functions to compile the source code to executable program that will describe in next section. 
+
+### 3. Workflow
+
+The workflow of MCSim under R can separate into three levels.
+
+1. **Make program:** 
+When loading the  `function.R`, it will create the `mod.exe` program in MCSim folder through `makemod()`. Since MCSim is free and open source software, each file is provided through human readable code (most are written by C language). To let the computer run these code, we need to compile the source code to machine readable program. The `makemod()` will automatically execute when loading the `function.R`, which means we don't need to run this function unless we accidently remove the `mod.exe` .
+
+2. **Build model:** Next, we need to build and compile the model code to the executable model program. We can use `makemcsim()` function to create the program with the name `mcsim. ... .exe`. The example code of linear model looks like this,
+
+
+```{R, eval = F}
+# ---------------------------------------------------------
+# Model definition file for a linear model (linear.model.R)
+# ---------------------------------------------------------
+Outputs = {y}; 
+
+# Model Parameters
+A = 0; # Default value of intercept
+B = 1; # Default value of slope
+
+# Statistical parameter
+SD_true = 0;
+
+CalcOutputs { y = A + B * x + NormalRandom(0,SD_true); } 
+
+End. 
+```
+
+To prevent the common pitfall, be sure to put semi-colon (;) at the end of statements. Also, the keyword "End" should put at the end of every model. Then run the following code to create the model program `mcsim.linear.model.R.exe`.
+
+```{R warning=FALSE, eval = T}
+makemcsim("linear.model.R")
+```
+
+The above function has the same result as `makemcsim linear.model.R mcsim.linear.model.R.exe` in command prompt. 
+
+3. **Input & simulation:** Finally, to conduct the model simulation, we need an input file that includes the given model parameter value and/or input data based on the study purpose. 
+
+```{R, eval = F}
+# ---------------------------------------------------------
+# Input definition file for a linear model (linear.in.R)
+# ---------------------------------------------------------
+Simulation { # 1 simple simulation
+  
+  A  = 1; # given value of intercept 
+  B  = 2; # given value of slope 
+  SD_true = 2; # given SD of noise 
+  
+  PrintStep (y, 0, 10, 1); 
+}
+
+END.
+```
+
+The `mcsim()` function in `function.R` provides an alternative way to run simulation in R environment instead of using the command prompt to run the simulation. 
+
+```{R eval = T, warning=FALSE}
+out <- mcsim("linear.model.R", "linear.in.R")
+```
+
+The simulation will generate output file `sim.out`. The above function has the same result as `./mcsim.linear.model.R.exe linear.in.R` in command prompt.
+
+The `mcsim()` can read the ouput after generate the `sim.out`. Here is the out put result,
+
+```{R}
+out
+```
+
+We can use R base plot function to visualize the output as well.
+
+```{R}
+plot(out$Time, out$y)
+```
+
+#### Summary of R function
 
 Here are the R functions that can run GNU MCSim in R environment more easily. All R functions are put in `functions.R`.
+
+```{r, eval=F}
+set_PATH()
+```
+
+- Detecting, checking, and setting the C compiler in your computer. This process will automatically run when loading `function.R`. 
+
+```{r, eval=F}
+makemod()
+```
+
+- Creating MCSim program `mod.exe`. This process will automatically run when loading `function.R` and desn't need to run again. 
 
 ```{r, eval=F}
 makemcsim(model)
@@ -57,18 +152,13 @@ mcsim(model, input.file)
 
 - Using the compiled program to run simulation. 
 
-### 3. Workflow
+```{r, eval=F}
+clear()
+```
 
-The workflow of MCSim under R can separate into three levels.
+- Removing all executable and output files with extension `.exe`, `.out`, and `.perks` in working directory. This function is used to ensure that all simulation process can be repoduce without misusing the old version of file with the same file name. This function will not remove `mod.exe`.
 
-- The first level is making the program. Since MCSim is free and open source software, each file is provided through human readable code (most are written by C language). To let the computer run these code, we need to compile the program to machine readable code, which is `mod.exe`, the R function `makemod()` can help us make this program.
-- Next, we need to compile the model code to the executable model program. We can use `makemcsim()` to create the program with the name `mcsim. ... .exe`. 
-- Finally, to conduct the model simulation, we need an input file that includes the given model parameter value and/or input data based on the study purpose. The `mcsim()` provides an alternative way to run simulation in R environment instead of using the command prompt to run the simulation. 
-
-![**Fig. 1.** Overview of GNU MCSim workflow ](https://raw.githubusercontent.com/nanhung/MCSim_under_R/master/doc/fig/flowchart.png)
-
-
-### 4. Examples
+### 4. Additional examples
 
 Some example R scripts will put into the `example` folder. Currently, it has a case of linear model in `linear.R` that can be used to conduct the simple test run. To run GNU MCSim in model simulation, we need to have two types of file (1) **model** and (2) **input** files. The syntax of the model description file can find in GNU MCSim User's Manual - Chapter 5.3. All example `model` and `input` files are located in the `input` folder.
 
